[package]
name = "avenger-wgpu"
version = "0.0.8"
edition = "2021"
description = "WGPU rendering engine for the Avenger visualization framework"
license = "BSD-3-Clause"
repository = "https://github.com/jonmmease/avenger"

[lib]
crate-type = [ "cdylib", "rlib",]

[features]
default = [ "cosmic-text", "rayon",]
cosmic-text = [ "dep:cosmic-text", "lazy_static", "avenger-text/cosmic-text",]
deno = []

[dependencies]
cfg-if = "1.0.1"
winit = { workspace = true }
wgpu = { workspace = true }
pollster = "0.4.0"
itertools = { workspace = true }
image = { workspace = true }
futures-intrusive = "^0.5"
etagere = "0.2.15"
colorgrad = "0.7.2"
ordered-float = { workspace = true }

[dev-dependencies]
dssim = "3.3.4"
rstest = "0.25.0"

[dependencies.avenger-scenegraph]
path = "../avenger-scenegraph"
version = "0.0.8"

[dependencies.avenger-common]
path = "../avenger-common"

[dependencies.avenger-text]
path = "../avenger-text"
default-features = false

[dependencies.rayon]
workspace = true
optional = true

[dependencies.tracing]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.bytemuck]
version = "1.23.1"
features = [ "derive",]

[dependencies.lazy_static]
workspace = true
optional = true

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.cosmic-text]
workspace = true
optional = true

[dependencies.lyon]
workspace = true

[dev-dependencies.avenger-vega-scenegraph]
path = "../avenger-vega-scenegraph"
features = [ "image-reqwest", "svg",]
version = "0.0.8"

[dev-dependencies.serde_json]
version = "1.0.140"

[target."cfg(target_arch = \"wasm32\")".dependencies.wgpu]
version = "25.0.2"
default-features = false

[target."cfg(target_arch = \"wasm32\")".dependencies.web-sys]
version = "0.3.77"
features = [ "Document", "Window", "Element", "HtmlCanvasElement",]
