[package]
name = "avenger-winit-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
avenger-common = { path = "../avenger-common" }
avenger-app = { path = "../avenger-app" }
avenger-eventstream = { path = "../avenger-eventstream" }
avenger-wgpu = { path = "../avenger-wgpu", default-features = false }
winit = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, default-features = false, features = ["macros"] }
notify = "8.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
avenger-wgpu = { path = "../avenger-wgpu", default-features = false, features = ["cosmic-text", "rayon"] }
