[package]
name = "avenger-winit-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
avenger-common = { path = "../avenger-common" }
avenger-app = { path = "../avenger-app" }
avenger-eventstream = { path = "../avenger-eventstream" }
avenger-scenegraph = { path = "../avenger-scenegraph" }
avenger-wgpu = { path = "../avenger-wgpu", default-features = false }
winit = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
cfg-if = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["macros"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
avenger-wgpu = { path = "../avenger-wgpu", default-features = false, features = ["cosmic-text", "rayon"] }
notify = "8.0.0"