[package]
name = "avenger"
version = "0.0.8"
edition = "2021"
description = "A visualization engine and renderer"
license = "BSD-3-Clause"

[dependencies.thiserror]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.lyon_extra]
workspace = true

[dependencies.lyon_path]
workspace = true
features = [ "serialization",]

[dependencies.image]
workspace = true
features = [ "png",]

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.tracing]
workspace = true

[dependencies.rayon]
workspace = true
