[package]
name = "gen-test-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {workspace = true}
vl-convert-rs = {path = "/Users/jonmmease/VegaFusion/repos/vl-convert/vl-convert-rs"}
pollster = "0.3"