[package]
name = "sg2d-vega"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sg2d = { path = "../sg2d" }
thiserror = { workspace = true }
serde = { workspace = true }
csscolorparser = "0.6.2"
serde_json = { version = "1.0.111" }
lyon_extra = { workspace = true }
lyon_path = { workspace = true, features = ["serialization"]}
reqwest = { version = "0.11.23", features = ["blocking"] }
image = { workspace = true, default-features = false, features = ["png"] }
