[package]
name = "sg2d-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "wgpu-winit"
path = "examples/wgpu-winit"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "scatter-panning"
path = "examples/scatter-panning"
crate-type = ["cdylib", "rlib"]

[dependencies]
sg2d = { path = "../sg2d" }

thiserror = { workspace = true }
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18.0"
itertools = "0.12.0"
image = "0.24.7"
futures-intrusive = "^0.5"
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev="941309aed230d7110bfec0d4af502ecb4648cf90" }
lyon = { workspace = true }

[dev-dependencies]
sg2d-vega = { path = "../sg2d-vega" }
serde_json = { version = "1.0.111" }
dssim = "3.2.4"
rstest = "0.18.2"