[package]
name = "sg2d-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
text-glyphon = ["glyphon"]
default = ["text-glyphon"]

[dependencies]
sg2d = { path = "../sg2d" }

thiserror = { workspace = true }
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18.0"
itertools = "0.12.0"
image = "0.24.7"
futures-intrusive = "^0.5"
etagere = "0.2.10"
colorgrad = "0.6.2"

# glyphon branch that includes text rotation support: https://github.com/jonmmease/glyphon/pull/1
glyphon = { git = "https://github.com/jonmmease/glyphon.git", rev="c468f5dacd4130b27a29b098c4de3f4d5c146209", optional = true }
lyon = { workspace = true }

[dev-dependencies]
sg2d-vega = { path = "../sg2d-vega", features = ["image-request"] }
serde_json = { version = "1.0.111" }
dssim = "3.2.4"
rstest = "0.18.2"

