[package]
name = "tree-sitter-avenger"
description = "Avenger Visualization Language"
version = "0.1.0"
authors = ["Jon Mease <jonmmease@gmail.com>"]
license = "Apache 2"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "avenger"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jonmmease/avenger"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
