[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-avenger"
description = "Avenger Visualization Language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "avenger"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Jon Mease", email = "jonmmease@gmail.com" }]
requires-python = ">=3.10"
license.text = "Apache 2"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/jonmmease/avenger"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
